# Forth-embed

./: .gitignore  CMakeLists.txt  README.md  forth_embed.c  forth_embed.h  main.c
src/: CMakeLists.txt  forth_embed.c  forth_embed.h
tests/: CMakeLists.txt  test_control_flow_operations.c  test_stack_operations.c
